--- a/Pos/res/layout/product_edit_item.xml
+++ b/Pos/res/layout/product_edit_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/background"  >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -118,6 +119,8 @@
         android:id="@+id/product_info_okButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/greenbutton"
+        android:textColor="#FFFFFF"
         android:text="OK" />
 
     <Button
