--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/background"  >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,6 +103,8 @@
             android:id="@+id/productItem_edit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/light_grey_button"
+            android:textColor="#FFFFFF"
             android:text="Edit" />
 
         <Button
