--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -4,7 +4,8 @@
     android:id="@+id/tab3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/background" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +34,8 @@
             android:id="@+id/product_addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/greenbutton"
+            android:textColor="#FFFFFF"
             android:text="Add" />
 
         <Button
@@ -45,6 +48,8 @@
             android:id="@+id/product_editButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/light_grey_button"
+            android:textColor="#FFFFFF"
             android:text="Edit" />
 
     </LinearLayout>
