link sale report with database(renovate)

--- a/Pos/res/drawable/background.xml
+++ b/Pos/res/drawable/background.xml
@@ -6,7 +6,7 @@
   <!-- Specify a gradient for the background -->
   <gradient
       android:angle="45"
-      android:startColor="#BDEDFF"
+      android:startColor="#FFFFFF"
       android:endColor="#E0FFFF" />
   
   
