--- a/Pos/res/layout/sale_report_list.xml
+++ b/Pos/res/layout/sale_report_list.xml
@@ -43,7 +43,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/testnaeiei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="         " />
