--- a/Pos/res/layout/sale_report_daily_lineitem.xml
+++ b/Pos/res/layout/sale_report_daily_lineitem.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.34"
             android:text="timee"
+            android:textColor="#000000"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
@@ -30,6 +31,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.65"
             android:text="Total Price"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2.07"
+            android:text="฿"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
