--- a/Pos/res/drawable/greenbutton.xml
+++ b/Pos/res/drawable/greenbutton.xml
@@ -4,10 +4,8 @@
  <item android:state_pressed="true" >
     <shape>
       <solid
-          android:color="#54FF7F" />
-      <stroke
-          android:width="1dp"
-          android:color="#FFFFFF" />
+          android:color="#41A317" />
+     
       <corners
           android:radius="5dp" />
       <padding
@@ -20,12 +18,10 @@
   <item>
     <shape>
       <gradient
-          android:startColor="#54FF7F"
-          android:endColor="#30CC57"
+          android:startColor="#41A317"
+          android:endColor="#52D017"
           android:angle="270" />
-      <stroke
-          android:width="1dp"
-          android:color="#FFFFFF" />
+    
       <corners
           android:radius="5dp" />
       <padding
