--- a/Pos/res/drawable/sale_item_listview.xml
+++ b/Pos/res/drawable/sale_item_listview.xml
@@ -6,20 +6,22 @@
   <!-- Specify a gradient for the background -->
   <gradient
       android:angle="90"
-      android:startColor="#FFFFFF"
-      android:endColor="#FFFFFF" />
+      android:startColor="#808080"
+      android:endColor="#837E7C" />
   
   <!-- Specify a dark blue border -->
   <stroke 
-    android:width="1dp"
-    android:color="#000066" />
+    android:width="4dp"
+    android:color="#000000" />
   
   <!-- Specify the margins that all content inside the drawable must adhere to -->
   
   <corners
-      android:topLeftRadius="2dp"
-      android:topRightRadius="2dp"
-      android:bottomLeftRadius="2dp"
-      android:bottomRightRadius="2dp"
+      android:radius="2dp"
       />
+  <padding
+      android:top="5dp"
+      android:bottom="5dp"
+      android:right="5dp"
+      android:left="10dp"/>
 </shape>
