--- a/Pos/res/drawable/tab_selector.xml
+++ b/Pos/res/drawable/tab_selector.xml
@@ -3,7 +3,7 @@
     <item android:state_selected="true" android:state_pressed="false" 
           android:drawable="@drawable/greenbutton" />
     <item android:state_selected="false" android:state_pressed="false" 
-          android:drawable="@drawable/light_grey_button" />
+          android:drawable="@drawable/black_tab" />
     <item android:state_pressed="true" 
           android:drawable="@drawable/test" />
 </selector>
