--- a/Pos/res/layout/product_add_item.xml
+++ b/Pos/res/layout/product_add_item.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/sale_report_bill_lineitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name" />
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/sale_report_bill_lineitem_priceperunit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Type" />
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/sale_report_bill_lineitem_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Price" />
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/sale_report_bill_lineitem_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Barcode" />
