--- a/Pos/res/layout/sale_report_daily_lineitem.xml
+++ b/Pos/res/layout/sale_report_daily_lineitem.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2.07"
-            android:text="date"
+            android:textColor="#000000"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
@@ -31,14 +31,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.65"
             android:text="Total Price"
+            android:textColor="#000000"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/report_bill_totalprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2.07"
             android:text="฿"
+            android:textColor="#000000"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
