--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -32,7 +32,7 @@
 
             <ListView
                 android:id="@+id/listView2"
-                android:layout_width="160dp"
+                android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/sale_item_listview" >
 
@@ -50,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0.0"
+                    android:textColor="@color/text_color" 
                     android:textAppearance="?android:attr/textAppearanceLarge" />
                 <EditText
                     android:id="@+id/set_quantity_editText"
