--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -112,6 +112,32 @@
         android:layout_height="wrap_content" >
 
         <TextView
+            android:id="@+id/sale_report_costTextView"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:textSize="25dp"
+            android:text="Cost" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:text=":   " />
+
+        <EditText
+            android:id="@+id/inventoryEdit_cost_edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
             android:id="@+id/textView7"
             android:layout_width="200dp"
             android:layout_height="35dp"
