--- a/Pos/res/layout/sale_report.xml
+++ b/Pos/res/layout/sale_report.xml
@@ -2,30 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <Button
         android:id="@+id/sale_repot_dailybutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/greenbutton"
         android:text="Daily" />
 
     <Button
         android:id="@+id/sale_report_monthlyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/greenbutton"
         android:text="Monthly" />
 
     <Button
         android:id="@+id/sale_report_yearButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/greenbutton"
         android:text="Year" />
-
-    <Button
-        android:id="@+id/sale_report_backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back" />
 
 </LinearLayout>
