--- a/Pos/res/layout/report_bill.xml
+++ b/Pos/res/layout/report_bill.xml
@@ -32,6 +32,20 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/sale_report_idBill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/report_bill_listView"
         android:layout_width="match_parent"
