--- a/Pos/res/layout/sale_report_daily_lineitem.xml
+++ b/Pos/res/layout/sale_report_daily_lineitem.xml
@@ -9,6 +9,18 @@
         android:layout_height="wrap_content" >
 
         <TextView
+            android:id="@+id/sale_report_daily_lineitem_idBill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
             android:id="@+id/sale_report_daily_lineitem_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
