add scan barcode button

--- a/Pos/res/layout/product_add_item.xml
+++ b/Pos/res/layout/product_add_item.xml
@@ -101,6 +101,13 @@
             android:layout_weight="1"
             android:ems="10" />
 
+        <Button
+            android:id="@+id/product_addDes_scanButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="scan" />
+
     </LinearLayout>
 
     <LinearLayout
