add find by partial

--- a/Pos/res/layout/inventory_tab.xml
+++ b/Pos/res/layout/inventory_tab.xml
@@ -11,6 +11,15 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
+        <EditText
+            android:id="@+id/inventory_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" >
+
+            <requestFocus />
+        </EditText>
+
         <ListView
             android:id="@+id/inventory_listView"
             android:layout_width="fill_parent"
@@ -39,6 +48,12 @@
                 android:text="Remove"
                 android:textColor="#FFFFFF"
                 android:background="@drawable/red_button" />
+
+            <Button
+                android:id="@+id/Inventort_Tab_reportButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Report" />
 
         </LinearLayout>
 
