--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical" 
     android:background="@drawable/background" >
 
+    <EditText
+        android:id="@+id/product_editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
