--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -119,7 +119,7 @@
             android:text="Cost" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/inventory_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
