--- a/Pos/res/layout/inventory_report_lineitem.xml
+++ b/Pos/res/layout/inventory_report_lineitem.xml
@@ -30,19 +30,19 @@
             android:id="@+id/inventory_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Large Text"/>
 
         <TextView
             android:id="@+id/inventory_report_quantityTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Large Text" />
 
         <TextView
             android:id="@+id/inventory_report_costTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Large Text" />
 
     </LinearLayout>
 
