remove cancel button in all page

--- a/Pos/res/layout/sale_report_choose_year.xml
+++ b/Pos/res/layout/sale_report_choose_year.xml
@@ -25,13 +25,7 @@
             android:id="@+id/report_yearly_okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/report_yearly_cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="OK" />
     </LinearLayout>
 
 </LinearLayout>
