--- a/Pos/res/layout/add_layout.xml
+++ b/Pos/res/layout/add_layout.xml
@@ -5,14 +5,13 @@
     android:orientation="vertical"
     android:background="@drawable/background" >
 
-   
-
     <TextView
         android:id="@+id/large_text_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <EditText
         android:id="@+id/name_text"
@@ -25,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Quantity"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <EditText
         android:id="@+id/quantity_text"
@@ -38,7 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Price"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <EditText
         android:id="@+id/price_text"
@@ -55,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_button_color"
             android:background="@drawable/greenbutton" />
 
     </LinearLayout>
