--- a/Pos/res/layout/product_add_item.xml
+++ b/Pos/res/layout/product_add_item.xml
@@ -106,13 +106,15 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/light_grey_button"
             android:text="scan" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="right" >
 
         <Button
             android:id="@+id/product_addDes_okButton"
