--- a/Pos/res/layout/inventory_edit_layout.xml
+++ b/Pos/res/layout/inventory_edit_layout.xml
@@ -23,15 +23,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="right" >
 
         <Button
             android:id="@+id/inventory_edit_okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
-            android:textColor="#FFFFFF"
-            android:text="OK" />
+            android:text="OK"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
