--- a/Pos/res/layout/item_layout.xml
+++ b/Pos/res/layout/item_layout.xml
@@ -10,13 +10,11 @@
 
         <TextView
             android:id="@+id/text_item"
-            android:layout_width="170dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000"
-            android:textColorHint="#000000"
-            android:textColorLink="#000000" />
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/text_price"
