--- a/Pos/res/layout/product_addbutton.xml
+++ b/Pos/res/layout/product_addbutton.xml
@@ -22,7 +22,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="right" >
 
         <Button
             android:id="@+id/product_add_okButton"
