--- a/Pos/res/layout/product_edit_item.xml
+++ b/Pos/res/layout/product_edit_item.xml
@@ -111,16 +111,24 @@
             android:id="@+id/product_info_scanButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/light_grey_button"
             android:text="Scan" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/product_info_okButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/greenbutton"
-        android:textColor="#FFFFFF"
-        android:text="OK" />
+        android:gravity="right"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/product_info_okButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/greenbutton"
+            android:text="OK"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
 
 </LinearLayout>
