--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -11,14 +11,16 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="Product ID :" />
 
         <TextView
             android:id="@+id/product_itemId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="productCode" />
 
     </LinearLayout>
@@ -29,14 +31,16 @@
 
         <TextView
             android:id="@+id/sale_report_priceTextView"
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="Name :" />
 
         <TextView
             android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="name" />
 
     </LinearLayout>
@@ -53,14 +57,16 @@
 
         <TextView
             android:id="@+id/sale_report_productTextView"
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="Type :" />
 
         <TextView
             android:id="@+id/product_item_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="type" />
 
     </LinearLayout>
@@ -71,37 +77,47 @@
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="Price :" />
 
         <TextView
             android:id="@+id/product_itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="40dp"
             android:text="price" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/TextView02"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Barcode :" />
-
-    <TextView
-        android:id="@+id/product_itemBarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="barcode" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+        <TextView
+            android:id="@+id/TextView02"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="Barcode :"
+            android:textSize="40dp" />
+
+        <TextView
+            android:id="@+id/product_itemBarcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="barcode"
+            android:textSize="40dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right" >
+
         <Button
             android:id="@+id/productItem_edit_button"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="@drawable/light_grey_button"
             android:textColor="#FFFFFF"
