--- a/Pos/res/layout/remove_layout.xml
+++ b/Pos/res/layout/remove_layout.xml
@@ -23,7 +23,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="right" >
 
         <Button
             android:id="@+id/OK_button"
