--- a/Pos/res/layout/sale_report.xml
+++ b/Pos/res/layout/sale_report.xml
@@ -8,23 +8,35 @@
 
     <Button
         android:id="@+id/sale_repot_dailybutton"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/greenbutton"
         android:text="Daily" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:orientation="vertical" >
+    </LinearLayout>
+
     <Button
         android:id="@+id/sale_report_monthlyButton"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/greenbutton"
         android:text="Monthly" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:orientation="vertical" >
+    </LinearLayout>
+
     <Button
         android:id="@+id/sale_report_yearButton"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@drawable/greenbutton"
-        android:text="Year" />
+        android:text="Yearly" />
 
 </LinearLayout>
