--- a/Pos/res/layout/sale_report_choose_monthly.xml
+++ b/Pos/res/layout/sale_report_choose_monthly.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/background" >
 -
 
     <LinearLayout
@@ -25,12 +26,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="right" >
 
         <Button
             android:id="@+id/report_monthly_okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/greenbutton"
             android:text="OK" />
     </LinearLayout>
 
