--- a/Pos/res/layout/sale_tab.xml
+++ b/Pos/res/layout/sale_tab.xml
@@ -43,7 +43,7 @@
 
                 <ListView
                     android:id="@+id/listView2"
-                    android:layout_width="300dp"
+                    android:layout_width="310dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/sale_item_listview" >
                 </ListView>
@@ -58,6 +58,13 @@
                 android:orientation="vertical" >
 
                 <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Price"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                <TextView
                     android:id="@+id/sale_report_productTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -67,9 +74,16 @@
                 <EditText
                     android:id="@+id/set_quantity_editText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_background" >
                     <requestFocus />
                 </EditText>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"
+                    android:orientation="vertical" >
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -77,25 +91,37 @@
                     android:orientation="vertical" >
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="240dp"
                         android:layout_height="wrap_content"
                         android:gravity="clip_horizontal" >
 
                         <Button
                             android:id="@+id/productItem_add_button"
-                            android:layout_width="wrap_content"
+                            android:layout_width="118dp"
                             android:layout_height="wrap_content"
                             android:background="@drawable/greenbutton"
                             android:text="OK"
                             android:textColor="#FFFFFF" />
 
+                        <LinearLayout
+                            android:layout_width="4dp"
+                            android:layout_height="match_parent" >
+                        </LinearLayout>
+
                         <Button
                             android:id="@+id/productItem_edit_button"
-                            android:layout_width="wrap_content"
+                            android:layout_width="118dp"
                             android:layout_height="wrap_content"
                             android:background="@drawable/light_grey_button"
                             android:text="Reset"
                             android:textColor="#FFFFFF" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:orientation="vertical" >
                     </LinearLayout>
 
                     <Button
