--- a/Pos/res/drawable/sale_item_listview.xml
+++ b/Pos/res/drawable/sale_item_listview.xml
@@ -6,13 +6,13 @@
   <!-- Specify a gradient for the background -->
   <gradient
       android:angle="90"
-      android:startColor="#808080"
-      android:endColor="#837E7C" />
+      android:startColor="#504A4B"
+      android:endColor="#504A4B" />
   
   <!-- Specify a dark blue border -->
   <stroke 
-    android:width="4dp"
-    android:color="#000000" />
+    android:width="2dp"
+    android:color="#4CC417" />
   
   <!-- Specify the margins that all content inside the drawable must adhere to -->
   
