--- a/Pos/res/layout/inventory_edit_layout.xml
+++ b/Pos/res/layout/inventory_edit_layout.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enter Product Code"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <EditText
         android:id="@+id/inventory_editEditText"
@@ -31,8 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
-            android:text="OK"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/text_button_color"
+            android:text="OK"/>
 
     </LinearLayout>
 
