--- a/Pos/res/layout/item_layout.xml
+++ b/Pos/res/layout/item_layout.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/text_price"
@@ -23,7 +23,7 @@
             android:layout_marginRight="@dimen/activity_vertical_margin"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_item_name"
@@ -31,8 +31,7 @@
             android:layout_height="wrap_content"
             android:text="฿"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#000000" />
-
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
     <TextView
@@ -40,10 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#000000"
+        android:textColor="@color/text_color"
         android:textColorHint="#000000"
         android:textColorLink="#000000" />
-
-    
 
 </LinearLayout>
