--- a/Pos/res/layout/large_item_layout.xml
+++ b/Pos/res/layout/large_item_layout.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:text="code"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textColorHint="#000000"
             android:textColorLink="#000000" />
 
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="name"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textColorHint="#000000"
             android:textColorLink="#000000" />
 
@@ -32,24 +32,26 @@
             android:id="@+id/sale_report_productTextView"
             android:layout_width="28dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/large_text_quantity"
             android:layout_width="151dp"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textColor="#000000"
+            android:textColor="@color/text_color"
             android:textColorHint="#000000"
             android:textColorLink="#000000" />
 
-        <TextView android:id="@+id/large_text_price" 
-            android:layout_width="90dp" 
-            android:layout_height="wrap_content" 
-            android:layout_marginRight="@dimen/activity_vertical_margin" 
-            android:text="Large Text" 
-            android:textAppearance="?android:attr/textAppearanceLarge" 
-            android:textColor="#000000"/>
+        <TextView
+            android:id="@+id/large_text_price"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_item_name"
@@ -57,10 +59,7 @@
             android:layout_height="wrap_content"
             android:text="฿"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#000000" />
-
+            android:textColor="@color/text_color" />
     </LinearLayout>
-
-    
 
 </LinearLayout>
