--- a/Pos/res/layout/product_add_item.xml
+++ b/Pos/res/layout/product_add_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/background" >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,8 @@
             android:id="@+id/testnaeiei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product ID" />
+            android:text="Product ID"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/product_add_productEditText"
@@ -24,7 +25,6 @@
 
             <requestFocus />
         </EditText>
-
     </LinearLayout>
 
     <LinearLayout
@@ -35,7 +35,8 @@
             android:id="@+id/sale_report_bill_lineitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name" />
+            android:text="Name"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/product_add_nameEditText"
@@ -43,7 +44,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -54,7 +54,8 @@
             android:id="@+id/sale_report_bill_lineitem_priceperunit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Type" />
+            android:text="Type"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/product_add_typeEditText"
@@ -62,7 +63,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -73,7 +73,8 @@
             android:id="@+id/sale_report_bill_lineitem_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price" />
+            android:text="Price"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/product_add_priceEditText"
@@ -81,7 +82,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -92,7 +92,8 @@
             android:id="@+id/sale_report_bill_lineitem_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Barcode" />
+            android:text="Barcode"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/product_add_barcodeEditText"
@@ -106,9 +107,9 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_button_color"
             android:background="@drawable/light_grey_button"
             android:text="scan" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -121,9 +122,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
-            android:textColor="#FFFFFF"
-            android:text="OK" />
-
+            android:text="OK"
+            android:textColor="@color/text_button_color"/>
     </LinearLayout>
 
 </LinearLayout>
