--- a/Pos/res/layout/product_item.xml
+++ b/Pos/res/layout/product_item.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/product_itemQuantity"
@@ -28,8 +28,7 @@
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
-
+            android:textColor="@color/text_color" />
     </LinearLayout>
 
 </LinearLayout>
