--- a/Pos/res/layout/product_iteminfo.xml
+++ b/Pos/res/layout/product_iteminfo.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background"  >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,16 +13,17 @@
             android:id="@+id/sale_report_productTextView"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="Product ID :" />
+            android:text="Product ID :"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
 
         <TextView
             android:id="@+id/product_itemId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="productCode" />
-
+            android:text="productCode"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -33,22 +34,22 @@
             android:id="@+id/sale_report_priceTextView"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="Name :" />
+            android:text="Name :"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
 
         <TextView
             android:id="@+id/product_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="name" />
-
+            android:text="name"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
     </LinearLayout>
 
     <LinearLayout
@@ -59,16 +60,17 @@
             android:id="@+id/sale_report_productTextView"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="Type :" />
+            android:text="Type :"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
 
         <TextView
             android:id="@+id/product_item_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="type" />
-
+            android:text="type"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,16 +81,17 @@
             android:id="@+id/textView7"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="Price :" />
+            android:text="Price :"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
 
         <TextView
             android:id="@+id/product_itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
-            android:text="price" />
-
+            android:text="price"
+            android:textColor="@color/text_color"
+            android:textSize="40dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -100,6 +103,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Barcode :"
+            android:textColor="@color/text_color"
             android:textSize="40dp" />
 
         <TextView
@@ -107,6 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="barcode"
+            android:textColor="@color/text_color"
             android:textSize="40dp" />
     </LinearLayout>
 
@@ -120,9 +125,8 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="@drawable/light_grey_button"
-            android:textColor="#FFFFFF"
-            android:text="Edit" />
-
+            android:text="Edit"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 </LinearLayout>
