--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -22,8 +22,8 @@
             android:id="@+id/sale_report_productTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:text="Name" />
+            android:text="Name"
+            android:textColor="@color/text_color" />
 
     </LinearLayout>
 
@@ -43,7 +43,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="@drawable/greenbutton"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_button_color"
             android:text="Add" />
 
         <LinearLayout
@@ -57,6 +57,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="@drawable/red_button"
+            android:textColor="@color/text_button_color"
             android:text="Remove" />
 
         <LinearLayout
@@ -70,7 +71,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:background="@drawable/light_grey_button"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_button_color"
             android:text="Edit" />
 
     </LinearLayout>
